static/scss/lower-bar-styles.scss
@use '_global-vars' as *;
$text-color: #cecece;

.lower-bar
{
    width: calc(100vw - 20px);
    height: 100px;
    padding: 0 10px;

    border-width: 8px 0 0 0;
    border-style: solid;
    border-image: linear-gradient(to top, rgba(255,0,0,0), rgba(66, 66, 66, .5)) 100;
    background-color: #000;

    @include normal-text-font;
}


.seek-bar
{
    display: flex;

    height: 10px;
    margin: 6px 0;
    padding: .2% .2%;

    cursor: pointer;

    border-radius: 60px;
    background-color: grey;

    align-items: center;
    justify-content: left;
}


.seek-bar-progress
{
    width: 0;
    height: 7px;

    border-radius: 100px;
    background-color: royalblue;
}


.seek-bar-handle
{
    width: 80px;
    height: 80px;
    margin: 0 -35px;

    transform: scale(.2, .2);

    border: 2px solid #000;
    border-radius: 100px;
    background: white;
}

.lower-bar-text-and-buttons-wrapper
{
    font-size: 12px;

    display: flex;

    margin: 0 5px;

    justify-content: center;
}

.current-time-and-title
{
    float: left;

    width: 40%;
    margin: 4px;
    padding: 0 3px;

    color: $text-color;

    flex-grow: 1;
    
}

.lower-bar-small-text
{
    margin: 4px 0;

    @include all-norms;
}

.playing-title
{
    font-size: 15px;

    height: 35px;

    @include normal-padding;
    @include ellipses-after-two-lines;
}

.lower-bar-images-wrapper
{
    display: flex; /* gap? */

    width: 20%;
    margin: auto;

    align-items: center;
    justify-content: center;
    flex-grow: 2;
}

.main-img
{
    width: 60px;

    cursor: pointer;
}

.small-img
{
    width: 30px;

    cursor: pointer;

    @include all-norms;
}


.lower-bar-right-side
{
    display: flex;
    float: right;
    justify-content: space-between;

    width: 40%;
    padding-top: 0;
    padding-bottom: 0;

    text-align: right;

    color: $text-color;

    flex-grow: 1;
    @include all-norms;
}


.justify-middle{
    align-items: center;
    display: flex;
}


@mixin track
{
    height: 10px;

    cursor: pointer;

    border: 1px solid #000;
    border-radius: 100px;
    background: #999;  
}

@mixin hover-track{
    background: #3071bb;
}


@mixin track-thumb
{
    width: 15px;
    height: 15px;
    margin-top: -4px;

    cursor: pointer;

    border: 1px solid #000;
    border-radius: 100px;
    background: #fff;
    box-shadow: 1px 1px 1px #000;

    appearance: none;  
}

input[type=range]
{
    appearance: none;

    height: 10px;

    width: 6rem;

    background-color: black;

    &::-webkit-slider-runnable-track
    {
        @include track;
    }

    &::-moz-range-track
    {
        @include track;
    }

    &:hover::-webkit-slider-runnable-track
    {
        @include hover-track;
    }

    &:hover::-moz-range-track
    {
        @include hover-track;
    }

    &::-webkit-slider-thumb
    {
        @include track-thumb;
    }

    &::-moz-range-thumb
    {
        @include track-thumb;
    }
}

